log
Thu May 12 15:23:51 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:22: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
             pushBack(lista,adj);
                      ^~~~~
                      list
sudoku.c:62:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dcac471
Thu May 12 15:24:00 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d3bdc77
Thu May 12 15:51:50 UTC 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k;
           ^
sudoku.c:47:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,k;
         ^
cc1: all warnings being treated as errors
Compilation failed
67d5430
Thu May 12 15:51:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d7a3341
Thu May 12 15:52:57 UTC 2022: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:8: error: redefinition of ‘arreglo’
   int *arreglo = (int*) calloc(10,sizeof(int));
        ^~~~~~~
sudoku.c:49:8: note: previous definition of ‘arreglo’ was here
   int *arreglo = (int*) calloc(10,sizeof(int));
        ^~~~~~~
Compilation failed
154c2e6
Thu May 12 15:54:24 UTC 2022: 
 sudoku.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
e0f473c
Thu May 12 17:20:18 UTC 2022: 
 tests:  3|4
total_score: 20/70
f71dfb2
Thu May 12 17:22:02 UTC 2022: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  4|4
total_score: 25/70
d0bfd7e
Thu May 12 17:22:49 UTC 2022: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
321b5b0
Thu May 12 17:28:51 UTC 2022: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:7: error: redeclaration of ‘k’ with no linkage
   int k,p;
       ^
sudoku.c:47:11: note: previous declaration of ‘k’ was here
   int i,j,k;
           ^
sudoku.c:85:18: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:83:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
0cb81e9
Thu May 12 17:29:01 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:7: error: redeclaration of ‘k’ with no linkage
   int k,p;
       ^
sudoku.c:47:11: note: previous declaration of ‘k’ was here
   int i,j,k;
           ^
sudoku.c:85:18: error: ‘node’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",node->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:85:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:84:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:83:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
3861108
